# nectar

./: .gitignore  README.md  pyproject.toml
nectar/: config.py  run.py
nectar/data/sample/: boulder.csv  castle_rock.csv  fort_collins.csv
nectar/functions/: cleaning.py  mismatch_analysis.py  plotting.py
nectar/outputs/: all_gdd.csv  clean_feederwatch.csv  flowering_times.csv  gdd_1988.csv  gdd_1989.csv  gdd_1990.csv  gdd_1991.csv  gdd_1992.csv  gdd_1993.csv  gdd_1994.csv  gdd_1995.csv  gdd_1996.csv  gdd_1997.csv  gdd_1998.csv  gdd_1999.csv  gdd_2000.csv  gdd_2001.csv  gdd_2002.csv  gdd_2003.csv  gdd_2004.csv  gdd_2005.csv  gdd_2006.csv  gdd_2007.csv  gdd_2008.csv  gdd_2009.csv  gdd_2010.csv  gdd_2011.csv  gdd_2012.csv  gdd_2013.csv  gdd_2014.csv  gdd_2015.csv  gdd_2016.csv  gdd_2017.csv  gdd_2018.csv  gdd_2019.csv  gdd_2020.csv  gdd_2021.csv  gdd_2022.csv  gdd_2023.csv  gdd_2024.csv  (+1 more)
