[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nectar-chra6227"
version = "0.1.0"
description = "Analysis of hummingbird phenology and relationship to flowering timing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Chandni", email = "chra6227@colorado.edu"},
]

dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
    "pandas >= 2.2.3"
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
run-nectar = "nectar.run:main"